--- a/apps/nfc-demo/TagWriteDialog.html
+++ b/apps/nfc-demo/TagWriteDialog.html
@@ -15,7 +15,7 @@
 
 <div data-role="page">
 		<div data-role="header" data-theme="d">
-			<h1>Dialog</h1>
+			<h1>NdefTag Write</h1>
 		</div>
 
 		<div data-role="content" data-theme="c">
