Intermediate changes for UI cleanup.

--- a/apps/nfc-demo/TagWriteDialog.html
+++ b/apps/nfc-demo/TagWriteDialog.html
@@ -15,13 +15,13 @@
 <body>
 <div data-role="page">
   <div data-role="header" data-theme="d">
-    <h1>NdefTag Write</h1>
+    <h1>NdefTag Write Dialog</h1>
   </div>
 
   <div data-role="content" data-theme="c">
-    <h1>Tag Writer</h1>
+    <h1>Message:</h1>
     <p>Please bring your tag near for writing.</p>
-    <a href="docs-dialogs.html" data-role="button" data-rel="back" data-theme="c" onclick="cancelPendingWrite();">
+    <a href="docs-dialogs.html" data-role="button" data-rel="back" data-theme="c" onclick="nfcUI.cancelPendingWrite();">
       Cancel
     </a>
   </div>
