Update gaia to use constructors with arguments.

--- a/apps/nfc-demo/nfc.html
+++ b/apps/nfc-demo/nfc.html
@@ -401,7 +401,7 @@
                 <div data-role="collapsible"><h2>URI Tag Writer</h2>
                     <div id="nfc_url_form_id">
                         <label for="basic">URI</label>
-                        <input class="uri" value=""/>
+                        <input class="uri" value="http://www.nytimes.com"/>
                         <button onclick="nfcWriter.postUriFormtoNdef('#nfc_url_form_id');">Write URI Tag</button>
                     </div>
                 </div>
